python/testData/highlighting/returnOutsideOfFunction.py
def <info descr="PY.FUNC_DEFINITION">foo</info>():
    class <info descr="PY.CLASS_DEFINITION">C</info>:
        <error descr="'return' outside of function">return 1</error>